--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:insert ="~{user/template_user::head}"></head>
     <body>
-    <div th:insert ="~{user/template_user::header}"></div>
-   <div class="container">
+        <div th:insert ="~{user/template_user::header}"></div>
+        <div class="container">
             <header class="jumbotron my-4">
                 <h1 class="display-3">Bienvenido a tu tienda en linea!!! </h1> 
             </header>
@@ -20,7 +20,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <p class="card-text"th:text="${product.name}"> Nombre del producto</p>  
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-success">Ver Producto</a>     
+                            <a class="btn btn-success" th:href="@{/home/product-detail/{id} (id=${product.id})}">Ver Producto</a>     
+
                         </div>
                     </div> 
                 </div>
@@ -28,19 +29,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
 
         </div>
-    
+
     </body>
     <div class="footer" th:insert ="~{user/template_user::footer}"></div>
 </html>
 <style>
-     .body{
-            position: relative;
-        }
-        .footer{
-            position: absolute;
-            bottom:0px;
-            height: 60px;
-            width: 100%;
-        }
-        
+    .body{
+        position: relative;
+    }
+    .footer{
+        position: absolute;
+        bottom:0px;
+        height: 60px;
+        width: 100%;
+    }
+
 </style>
