--- a/src/main/resources/templates/user/productdetail.html
+++ b/src/main/resources/templates/user/productdetail.html
@@ -6,9 +6,8 @@
 <body>
 
   <!-- Navigation -->
-  <div th:insert = "~{user/template_user::header}"></div>
-
-  <!--<div th:insert = "~{user/template_user::userlogged}" th:unless="${id==null}"></div>-->
+  <div th:insert ="~{user/template_user::header}" th:if="${id==null}"></div>
+  <div th:insert ="~{user/template_user::userlogger}" th:unless="${id==null}"></div>
 
     <!-- Page Content -->
     <div class="container">
